<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvIndex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/index_standing"
            android:textColor="#000"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvClubName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/club_name"
            android:maxLines="1"
            android:textColor="#000"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvPlayed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/played"
            android:textColor="#000"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvWin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/win"
            android:textColor="#000"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/tvDraw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/draw"
            android:textColor="#000"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvLose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lose"
            android:textColor="#000"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvGA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goal_against"
            android:textColor="#000"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvGF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goal_for"
            android:textColor="#000"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvGD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goal_difference"
            android:textColor="#000"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/total"
            android:textColor="#000"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>