<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailEventActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?homeAsUpIndicator"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background_rounded"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/home"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/containerHomeBadgeTeam"
            app:layout_constraintStart_toStartOf="@+id/containerHomeBadgeTeam"
            app:layout_constraintBottom_toTopOf="@+id/containerHomeBadgeTeam" />

        <RelativeLayout
            android:id="@+id/containerHomeBadgeTeam"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_team_rounded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivDetailHomeLogo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/badge_home_team"
                tools:srcCompat="@tools:sample/avatars" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tvDetailHomeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/title_home_team"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/containerHomeBadgeTeam"
            app:layout_constraintStart_toStartOf="@+id/containerHomeBadgeTeam"
            app:layout_constraintTop_toBottomOf="@+id/containerHomeBadgeTeam" />

        <TextView
            android:id="@+id/tvDetailHomeScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/min"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDetailHomeName"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/containerHomeBadgeTeam" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDetailHomeScore"
            app:layout_constraintEnd_toStartOf="@+id/containerBadgeTeam"
            app:layout_constraintStart_toEndOf="@+id/containerHomeBadgeTeam"
            app:layout_constraintTop_toTopOf="@+id/tvDetailHomeScore" />

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/tvDetailAwayScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/min"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvDetailAwayName"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/containerBadgeTeam" />

        <TextView
            android:id="@+id/tvDetailAwayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/title_away_team"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/containerBadgeTeam"
            app:layout_constraintStart_toStartOf="@+id/containerBadgeTeam"
            app:layout_constraintTop_toBottomOf="@+id/containerBadgeTeam" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/away"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/containerBadgeTeam"
            app:layout_constraintStart_toStartOf="@+id/containerBadgeTeam"
            app:layout_constraintBottom_toTopOf="@+id/containerBadgeTeam" />

        <RelativeLayout
            android:id="@+id/containerBadgeTeam"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_team_rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivDetailAwayLogo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/badge_away_team"
                tools:srcCompat="@tools:sample/avatars" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDetailEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerTeam"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:theme="@style/ProgressBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerTeam" />

</androidx.constraintlayout.widget.ConstraintLayout>